--- a/nginx.conf
+++ b/nginx.conf
@@ -1,29 +1,40 @@
 worker_processes 1;
 
-events { worker_connections 1024; }
+events {
+    worker_connections 1024;
+}
 
 http {
+    upstream gallery {
+        server gallery:3000;
+    }
+
+    upstream server {
+        server server:8888;
+    }
+
     server {
         listen 80;
 
         client_max_body_size 100M;
 
         location / {
-            proxy_pass http://server:8888;
+            if ($request_uri ~* ^/(images/*|event|upload|fetch)) {
+                proxy_pass http://server$request_uri;
+            }
+            if ($request_uri = /) {
+                proxy_pass http://server;
+            }
+            if ($request_uri ~* ^/gallery) {
+                proxy_pass http://gallery;
+            }
+            proxy_pass http://gallery$request_uri;
+
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_http_version 1.1;
-            proxy_set_header Connection "";
-        }
-
-        location /gallery {
-            proxy_pass http://gallery:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
